# ago

./: .gitignore  CLAUDE.md  GLOBAL_ROADMAP.md  ONBOARDING.md  README.md  ROADMAP.md  WORKFLOW_VISION.md  pyproject.toml  simple-assistant.agt  test-mcp-template.agt
.github/: CLAUDE_CODE_SETUP.md
.github/workflows/: claude-code.yml  claude-issue-worker.yml
ago/: __init__.py
ago/agents/: __init__.py  agent_react_flow.py  streaming_react_wrapper.py
ago/cli/: __init__.py  main.py  mcp_commands.py
ago/cli/tui/: __init__.py  agent_chat.py
ago/config/: mcp_servers.yaml
ago/core/: __init__.py  __main__.py  ago_cli.py  base_node.py  config.py  daemon.py  daemon_client.py  daemon_v2.py  flow_parser.py  mcp_dependency_manager.py  mcp_integration.py  mcp_registry.py  pocketflow_streaming.py  process_manager.py  registry.py  supervisor.py  test_daemon.py  tool_formatter.py  workflow.py
ago/core/agent_process/: __init__.py  __main__.py  main.py
ago/core/nodes/: __init__.py  agent_node.py  base_ago_node.py  interactive_node.py  merge_node.py  parallel_flow_node.py  parallel_node.py  script_node.py  utils.py
ago/templates/: __init__.py  my-test-agent.agt  planner.agt  socratic.agt  tree-of-thought.agt
cookbook/multi-agent/: README.md  __init__.py  two_agent_research.spec
cookbook/workflows/: CUSTOM_NODES.md  FIELD_MAPPING.md  FORKED_FLOWS.md  LINEAR_WORKFLOW.md  MERGE_NODE.md  QUICK_START.md  README.md  forked_flows_simple.spec  interactive_workflow.spec  parallel_analysis.spec  parallel_with_merge.spec  simple_linear_workflow.spec
cookbook/workflows/scripts/: merge_analysis.py  sleep_and_report.py  step1_input.py  step3_validate.py  validate_flow_a.py  validate_flow_b.py
test/: test_streaming.py
